syntax = "proto3";

package authorization;

option go_package = "internal/delivery/grpcapi/authpb";

import "auth_message.proto";

message AuthorizationRequest {
  Request request = 1;
}

message AuthorizationResponse {
  bool ok = 1;
}

service Authorization {
  rpc TryAuthorization(AuthorizationRequest) returns (AuthorizationResponse);
}